--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -89,24 +89,36 @@
 </section>
 
 <!-- ajuda a dependentes quimicos -->
+<div class="bg-primary bg-gradient bg-opacity-25 py-4">
 
-<section class="container">
-    <h3>
-        Parcerias com comunidades terapêuticas
-    </h3>
+    <section class="container flex-column">
+        <article class="row gap-3">
+            <div class="col-lg-6">
+                <h3 class="fs-5">
+                    Parcerias com comunidades terapêuticas
+                </h3>
+            
+                <h2 class="fonte-texto">
+                    Tratamento para dependências químicas com encaminhamento para internações em comunidades terapêuticas, com mais de 100 pessoas atendidas.
+                </h2>
+            </div>
+    
+            <div class="col-lg-5">
+                <div class="d-flex flex-wrap gap-4 pt-4 ps-4">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia2.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia3.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia4.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia5.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia6.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia7.jpg" alt="" width="100" height="100">
+                    <img class="rounded-4" src="./assets/img/dependencia/dependencia8.jpg" alt="" width="100" height="100">
+                </div>
+            </div>
+        </article>
+    </section>
+</div>
 
-    <h2>
-        Tratamento para dependências químicas com encaminhamento para internações em comunidades terapêuticas, com mais de 100 pessoas atendidas.
-    </h2>
-    <img src="./assets/img/dependencia/dependencia.jpg" alt="" width="200" height="200">
-    <img src="./assets/img/dependencia/dependencia2.jpg" alt="" width="200" height="200">
-    <img src="./assets/img/dependencia/dependencia3.jpg" alt="" width="200" height="200">
-    <img src="./assets/img/dependencia/dependencia4.jpg" alt="" width="200" height="200">
-    <img src="./assets/img/dependencia/dependencia5.jpg" alt="" width="200" height="200">
-    <img src="./assets/img/dependencia/dependencia6.jpg" alt="" width="200" height="200">
-    <img src="./assets/img/dependencia/dependencia7.jpg" alt="" width="200" height="200">
-
-</section>
 
 <!-- carrossel -->
 
