--- a/src/app/home/sobre/sobre.component.css
+++ b/src/app/home/sobre/sobre.component.css
@@ -63,3 +63,11 @@ p {
     color: rgb(255, 255, 255);
     text-shadow: black 0.1em 0.1em 0.2em
 }
+
+.fonte-texto {
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 38px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+    text-shadow: black 0.1em 0.1em 0.2em
+}
