--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -89,7 +89,7 @@
 </section>
 
 <!-- ajuda a dependentes quimicos -->
-<div class="bg-primary bg-gradient bg-opacity-25 py-4">
+<div class="bg-primary bg-gradient bg-opacity-25 py-4 mb-5">
 
     <section class="container flex-column">
         <article class="row gap-3">
@@ -123,9 +123,12 @@
 <!-- carrossel -->
 
 <section>
-    <h3 class="text-center pt-4 pb-4 mt-4 position-relative">
-        Durante alguns anos viemos ajudando os familiares do Novo Gama
-    </h3>
+    <h2 class="text-center fs-1 pt-4 pb-4 my-4 position-relative">
+        Durante alguns anos viemos <div class="cor-destaque">
+            ajudando os familiares do Novo Gama!!!
+        </div>
+            
+    </h2>
 
     <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-4">
         <div id="carouselExampleCaptions" class="carousel slide w-75"> <!-- Aumentei a largura para 75% -->
