--- a/src/app/home/sobre/sobre.component.css
+++ b/src/app/home/sobre/sobre.component.css
@@ -22,6 +22,10 @@ h1, h3, li {
     font-family: 'Lilita One', sans-serif;
 }
 
+h2 {
+    font-family: 'DM Sans', sans-serif;
+}
+
 .primeira {
     margin: 0 auto -50px;
 }
@@ -70,4 +74,8 @@ p {
     font-weight: 400;
     color: rgb(255, 255, 255);
     text-shadow: black 0.1em 0.1em 0.2em
+}
+
+.cor-destaque {
+    color: rgb(112, 244, 85);
 }
