--- a/src/app/home/sobre/sobre.component.css
+++ b/src/app/home/sobre/sobre.component.css
@@ -24,6 +24,7 @@ h1, h3, li {
 
 h2 {
     font-family: 'DM Sans', sans-serif;
+    text-shadow: rgba(7, 7, 7, 0.404) 0.1em 0.1em 0.2em
 }
 
 .primeira {
@@ -77,5 +78,7 @@ p {
 }
 
 .cor-destaque {
-    color: rgb(112, 244, 85);
+    color: rgb(3, 179, 233);
+    text-shadow: black 0.1em 0.1em 0.2em
+
 }
