--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,5 +3,5 @@
   }
 
   .navbar-scrolled {
-    background: linear-gradient(90deg, rgb(76, 152, 198), rgb(82, 82, 255)) !important;
+    background: linear-gradient(90deg, rgba(76, 151, 198, 0.804), rgba(82, 82, 255, 0.804)) !important;
   }
