--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -122,52 +122,34 @@
 
 <!-- carrossel -->
 
-<section>
+<section class="my-4">
+
     <h2 class="text-center fs-1 pt-4 pb-4 my-4 position-relative">
-        Durante alguns anos viemos <div class="cor-destaque">
-            ajudando os familiares do Novo Gama!!!
-        </div>
-            
+        Durante alguns anos viemos <div class="cor-destaque d-inline">ajudando</div> os familiares do Novo Gama!!!
     </h2>
+    
 
     <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-4">
-        <div id="carouselExampleCaptions" class="carousel slide w-75"> <!-- Aumentei a largura para 75% -->
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner rounded-4">
+        <div id="carouselExampleAutoplaying" class="carousel slide w-75" data-bs-ride="carousel"> <!-- Aumentei a largura para 75% -->
+            <div class="carousel-inner rounded-5">
                 <div class="carousel-item active">
                     <img src="./assets/img/carrossel/carrossel.jpg" class="d-block w-100" alt="First Slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/img/carrossel/carrossel2.jpg" class="d-block w-100" alt="Second Slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/img/carrossel/carrossel3.jpg" class="d-block w-100" alt="Third Slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+              </button>
         </div>
     </div>
 </section>
