--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -153,3 +153,23 @@
         </div>
     </div>
 </section>
+
+<!-- ajude a comunidade -->
+
+<div class="bg-primary bg-gradient bg-opacity-25 py-4 mb-5">
+
+    <section class="container flex-column">
+        <article class="row gap-3">
+            <div class="col-lg-6">
+                <h3 class="fs-5">
+                    Parcerias com comunidades terapêuticas
+                </h3>
+            
+                <h2 class="fonte-texto py-5">
+                    Tem vontade <br> de ajudar na causa?
+                </h2>
+            </div>
+    
+        </article>
+    </section>
+</div>
