--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -169,6 +169,12 @@
                     Tem vontade <br> de ajudar na causa?
                 </h2>
             </div>
+
+            <div class="col-lg-5">
+                <div class="d-flex flex-wrap gap-4 pt-4 ps-4">
+                    
+                </div>
+            </div>
     
         </article>
     </section>
