--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -16,25 +16,28 @@
 </section>
 
 <!-- cargos do Instituto -->
-
-<section class="container d-flex flex-column position-relative mb-3 pb-4">
-    <article class="mt-5 row">
-        <figure class="col-lg-6 mb-3 primeira-imagem justify-content-center d-flex">
-            <img class="img-fluid" id="efeito-imagem" src="./assets/img/sales.jpg" width="400" height="400" alt="foto da galera do REFAM">
-        </figure>
-        <div class="col-lg-6 pt-5 text-center position-relative">
-            <div class="d-flex position-absolute z-n1 justify-content-center align-items-center" style="width: 100%; height: 100%;">
-                <img src="./assets/img/background/circulo.png" width="420" height="420" alt="">
+<section class="bg-primary bg-gradient bg-opacity-25">
+    <div class="container d-flex flex-column position-relative mb-3 pb-4">
+        <article class="mt-5 row">
+            <div class="col-lg-5">
+                <figure class=" mb-3 justify-content-center d-flex blob">
+                    <img class="img-fluid" src="./assets/img/sales.jpg" alt="foto da galera do REFAM">
+                </figure>
             </div>
-            <!-- Coloquei a imagem do círculo dentro de um contêiner flexível para centralização -->
-            <h1 class="pt-5 mt-4">Acreditar Sempre!!!!</h1>
-            <p class="pt-4">
-                Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
-                
-                Desde então, o Instituto REFAM tem desempenhado um papel crucial, impactando positivamente inúmeras famílias em toda a região do Entorno e no Distrito Federal. Sua sede, estrategicamente localizada no município de Novo Gama, serve como ponto de partida para uma jornada contínua de transformação social.
-            </p>
-        </div>
-    </article>
+            <div class="col-lg-7 pt-1 text-center position-relative">
+                 <!-- <div class="d-flex position-absolute z-n1 justify-content-center align-items-center" style="width: 100%; height: 100%;">
+                    <img src="./assets/img/background/circulo.png" width="420" height="420" alt="">
+                </div> -->
+                <!-- Coloquei a imagem do círculo dentro de um contêiner flexível para centralização -->
+                <h1 class="pt-5 mt-4">Acreditar Sempre!!!!</h1>
+                <p class="pt-4 text-warning">
+                    Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
+                    
+                    Desde então, o Instituto REFAM tem desempenhado um papel crucial, impactando positivamente inúmeras famílias em toda a região do Entorno e no Distrito Federal. Sua sede, estrategicamente localizada no município de Novo Gama, serve como ponto de partida para uma jornada contínua de transformação social.
+                </p>
+            </div>
+        </article>
+    </div>
 </section>
 
 <!-- Resumo de atividades do REFAM -->
@@ -172,7 +175,7 @@
 
             <div class="col-lg-5">
                 <div class="d-flex flex-wrap gap-4 pt-4 ps-4">
-                    aaaaaaaaaaaaaaaa
+                    <button type="button" class="btn btn-outline-success">Success</button>
                 </div>
             </div>
     
