--- a/src/app/home/sobre/sobre.component.css
+++ b/src/app/home/sobre/sobre.component.css
@@ -9,13 +9,13 @@ div, figure {
     border-radius: 110px 250px 180px 250px;
     transform-origin: center center;
     transition: transform 0.8s ease, border-radius 0.7s ease, box-shadow 4s ease; /* Transições separadas para transform, border-radius e box-shadow */
-    box-shadow: rgba(121, 58, 231, 0.583) 5px 5px 40px 5px;
+    box-shadow: rgba(255, 84, 252, 0.583) 5px 5px 40px 5px;
 }
 
 #efeito-imagem:hover, #efeito-imagem:focus {
     transform: translateX(0) scale(0.7);
     border-radius: 200px 100px 200px 100px;
-    box-shadow: rgb(40, 1, 108) 40px 40px 300px 40px; /* Aumenta o tamanho da sombra durante o hover */
+    box-shadow: rgb(135, 39, 169) 40px 40px 300px 40px; /* Aumenta o tamanho da sombra durante o hover */
 }
 
 h1, h3, li {
@@ -81,4 +81,34 @@ p {
     color: rgb(3, 179, 233);
     text-shadow: black 0.1em 0.1em 0.2em
 
+}
+
+.blob {
+    width: 400px;
+    height: 400px;
+    border-radius: 60% 40% 40% 60% / 60% 40% 60% 40%;
+    overflow: hidden;
+    animation: flow 4s infinite ease-in-out;
+}
+
+.blob img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@keyframes flow {
+    
+    0% {
+        border-radius: 60% 40% 40% 60% / 60% 40% 60% 40%;
+    }
+    35% {
+        border-radius: 80% 70% 60% 60% / 60% 70% 60% 60%;
+    }
+    70% {
+        border-radius: 70% 90% 60% 70% / 80% 90% 50% 90%;
+    }
+    100% {
+        border-radius: 60% 40% 40% 60% / 60% 40% 60% 40%;
+    }
 }
