--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -159,17 +159,17 @@
 
 <!-- ajude a comunidade -->
 
-<div class="bg-primary bg-gradient bg-opacity-25 py-4 mb-5">
+<div class="bg-primary bg-gradient bg-opacity-25 py-4 my-4">
 
     <section class="container flex-column">
         <article class="row gap-3">
             <div class="col-lg-6">
                 <h3 class="fs-5">
-                    Parcerias com comunidades terapêuticas
+                    voce gostaria de fazer uma doação?
                 </h3>
             
-                <h2 class="fonte-texto py-5">
-                    Tem vontade <br> de ajudar na causa?
+                <h2 class="fonte-texto fs-1 py-5">
+                    Sua doação <br> mudara <div class="cor-destaque2 d-inline">famílias</div>
                 </h2>
             </div>
 
