--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,3 +5,49 @@
   .navbar-scrolled {
     background: linear-gradient(90deg, rgba(76, 151, 198, 0.804), rgba(82, 82, 255, 0.804)) !important;
   }
+
+  li, a {
+    text-shadow: rgba(0, 0, 0, 0.889) 0.1em 0.1em 0.2em
+  }
+
+  .navbar-nav {
+    display: flex;
+  }
+  
+  .link {
+    position: relative;
+    padding-left: 5px;
+    cursor: pointer;
+
+  }
+  
+  .link::before,
+  .link::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #ffffff; /* Cor da linha */
+    transition: all 0.6s ease-in-out;
+  }
+  
+  .link::before {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  
+  .link::after {
+    bottom: 0;
+    right: 0;
+    transform-origin: left;
+  }
+  
+  .link:hover::before,
+  .link:hover::after {
+    width: 100%; /* 100% para cobrir toda a largura do link */
+  }
+  
+  .link:hover {
+    color: #ffffff;
+  }
