--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg" [ngClass]="{'fixed-top': navbarScrolled, 'bg-transparent': !navbarScrolled, 'navbar-scrolled': navbarScrolled}">
     <div class="container-fluid">
         <div class="col-md-5">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand text-light" href="#">
                 <img src="favicon.ico" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Projeto REFAM
             </a>
@@ -11,17 +11,17 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+                <li class="nav-item link">
+                    <a class="nav-link active text-light" aria-current="page" href="#">Sobre</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#cursos">Cursos</a>
+                <li class="nav-item link">
+                    <a class="nav-link text-light" href="#cursos">Cursos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contatos">Contatos</a>
+                <li class="nav-item link">
+                    <a class="nav-link text-light" href="#contatos">Contatos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <li class="nav-item link">
+                    <a class="nav-link disabled text-light" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
         </div>
