--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -164,11 +164,11 @@
     <section class="container flex-column">
         <article class="row gap-3">
             <div class="col-lg-6">
-                <h3 class="fs-5">
-                    voce gostaria de fazer uma doação?
+                <h3 class="fs-5 text-center">
+                    você gostaria de fazer uma doação?
                 </h3>
             
-                <h2 class="fonte-texto fs-1 py-5">
+                <h2 class="fonte-texto fs-0 py-3 text-center">
                     Sua doação <br> mudara <div class="cor-destaque2 d-inline">famílias</div>
                 </h2>
             </div>
