--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,13 +15,13 @@
                     <a class="nav-link active text-light" aria-current="page" href="#">Sobre</a>
                 </li>
                 <li class="nav-item link">
-                    <a class="nav-link text-light" href="#cursos">Cursos</a>
+                    <a class="nav-link text-light px-4" href="#cursos">Cursos</a>
                 </li>
                 <li class="nav-item link">
                     <a class="nav-link text-light" href="#contatos">Contatos</a>
                 </li>
                 <li class="nav-item link">
-                    <a class="nav-link disabled text-light" aria-disabled="true">Disabled</a>
+                    <a class="nav-link disabled text-light px-4" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
         </div>
