--- a/src/app/buttons/buttons.component.css
+++ b/src/app/buttons/buttons.component.css
@@ -1,19 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100&display=swap');
 
-body, html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background: #5CA4EA;
-  overflow: hidden;
-  font-family: 'Lato', sans-serif;
-}
 
 .container {
-  width: 400px;
-  height: 400px;
-  position: absolute;
+  overflow: hidden;
+  height: 100px;
+  position: relative;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -29,6 +20,7 @@ body, html {
 }
 
 .btn {
+  border-radius: 5px;
   width: 180px;
   height: 60px;
   cursor: pointer;
@@ -39,6 +31,7 @@ body, html {
 }
 
 svg {
+  border-radius: 5px;
   position: absolute;
   left: 0;
   top: 0;
@@ -51,7 +44,7 @@ svg {
 
 .btn:hover {
   transition: 1s ease-in-out;
-  background: #4F95DA;
+  background: #6bc266;
 }
 
 .btn:hover svg {
