--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -162,7 +162,7 @@
 <div class="bg-primary bg-gradient bg-opacity-25 py-4 my-5">
 
     <section class="container flex-column">
-        <article class="row gap-3">
+        <article class="row">
             <div class="col-lg-6">
                 <h3 class="fs-5 text-center">
                     você gostaria de fazer uma doação?
@@ -173,10 +173,8 @@
                 </h2>
             </div>
 
-            <div class="col-lg-5">
-                <div class="d-flex flex-wrap gap-4 pt-4 ps-4">
-                    <button type="button" class="btn btn-outline-success">Success</button>
-                </div>
+            <div class="col-lg-6">
+                <app-buttons class=""></app-buttons>
             </div>
     
         </article>
