--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,9 @@ html {
 body {
     min-height: 100%;
     display: grid;
+    /* background-color: aliceblue; */
     background: linear-gradient(90deg, rgb(131, 159, 250), rgb(131, 210, 250));
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 1fr auto; 
 }
 
 p {
