--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -174,6 +174,9 @@
             </div>
 
             <div class="col-lg-6">
+                <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+                    <img class="img-fluid" src="./assets/img/background/quadradinhos.png" width="550" height="550" alt="">
+                </div>
                 <app-buttons class=""></app-buttons>
             </div>
     
