--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -16,7 +16,7 @@
 </section>
 
 <!-- cargos do Instituto -->
-<section class="bg-primary bg-gradient bg-opacity-25">
+<section class="cor-fundo">
     <div class="container d-flex flex-column position-relative mb-3 pb-4">
         <article class="mt-5 row">
             <div class="col-lg-5">
@@ -30,7 +30,7 @@
                 </div> -->
                 <!-- Coloquei a imagem do círculo dentro de um contêiner flexível para centralização -->
                 <h1 class="pt-5 mt-4">Acreditar Sempre!!!!</h1>
-                <p class="pt-4 text-warning">
+                <p class="pt-4 ">
                     Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
                     
                     Desde então, o Instituto REFAM tem desempenhado um papel crucial, impactando positivamente inúmeras famílias em toda a região do Entorno e no Distrito Federal. Sua sede, estrategicamente localizada no município de Novo Gama, serve como ponto de partida para uma jornada contínua de transformação social.
@@ -174,9 +174,7 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
-                    <img class="img-fluid" src="./assets/img/background/quadradinhos.png" width="550" height="550" alt="">
-                </div>
+
                 <app-buttons class=""></app-buttons>
             </div>
     
