--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="center">
       <button class="btn">
+        <div class="position-absolute z-n1 d-flex justify-content-center">
+          <img class="img-fluid setas-img" src="./assets/img/background/setinhas.png" width="500" height="500" alt="">
+      </div>
         <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
           <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
           <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
