--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,11 +3,13 @@
   }
 
   .navbar-scrolled {
-    background: linear-gradient(90deg, rgba(76, 151, 198, 0.804), rgba(82, 82, 255, 0.804)) !important;
+    background: linear-gradient(90deg, rgba(216, 239, 255, 0.689), rgba(255, 255, 255, 0.845), rgba(255, 255, 255, 0.845)) !important;
+    /* background: linear-gradient(90deg, rgba(76, 151, 198, 0.804), rgba(82, 82, 255, 0.804)) !important; */
   }
 
-  li, a {
-    text-shadow: rgba(0, 0, 0, 0.889) 0.1em 0.1em 0.2em
+  li, a, .cor-text {
+    color: #20c0ff !important;
+    /* text-shadow: rgba(153, 153, 153, 0.318) 0.1em 0.1em 0.2em */
   }
 
 
@@ -27,7 +29,7 @@
     position: absolute;
     width: 0;
     height: 2px;
-    background-color: #ffffff; /* Cor da linha */
+    background-color: #20c0ff; /* Cor da linha */
     transition: all 0.6s ease-in-out;
   }
   
