--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@ html {
 body {
     min-height: 100%;
     display: grid;
-    /* background-color: aliceblue; */
-    background: linear-gradient(90deg, rgb(131, 159, 250), rgb(131, 210, 250));
+    background-color: rgb(255, 255, 255);
+    /* background: linear-gradient(90deg, rgb(131, 159, 250), rgb(131, 210, 250)); */
     grid-template-rows: 1fr auto; 
 }
 
@@ -16,6 +16,6 @@ p {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-style: italic;
-    color: rgb(255, 255, 255);
-    text-shadow: black 0.1em 0.1em 0.2em
+    color: rgb(0, 0, 0);
+    /* text-shadow: black 0.1em 0.1em 0.2em */
 }
