--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,8 +1,8 @@
 <!-- cabeçario -->
 
 <section class="container d-flex flex-column position-relative primeira mb-5 pb-4">
-    <article class="mt-5 pt-4 row">
-        <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
+    <article class="my-5 pt-4 row">
+        <div class="col-lg-6 pt-4 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
             <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
                 <img class="img-fluid" src="./assets/img/background/varios.png" width="500" height="500" alt="">
             </div>
@@ -10,8 +10,29 @@
             <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
         <figure class="col-lg-6 mb-3 primeira-imagem justify-content-center d-flex"> <!-- Substituí col-sm-3 por col-lg-6 -->
-            <img class="img-fluid" id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="foto da galera do REFAM">
+            <img class="img-fluid" id="efeito-imagem" src="./assets/img/foto1.jpg" width="430" height="430" alt="foto da galera do REFAM">
         </figure>
+    </article>
+
+    <article class="row align-items-center my-5">
+        <div class="col-12 position-relative">
+            <div class="bg-painel pt-4 pb-1 rounded-5">
+                <ul class="py-4 blist-group-horizontal d-flex flex-wrap justify-content-center">
+                    <li class="text-center list-group-item mx-5">
+                        <h3 class="fs-1 h3-painel"><h5 class="d-inline">+</h5> 300</h3>
+                        <p class="p-painel fs-5">pessoas ajudadas</p>
+                    </li>
+                    <li class="text-center list-group-item mx-5">
+                        <h3 class="fs-1 h3-painel"><h5 class="d-inline">+</h5> 5</h3>
+                        <p class="p-painel fs-5">bairros alcançados</p>
+                    </li>
+                    <li class="text-center list-group-item mx-5">
+                        <h3 class="fs-1 h3-painel"><h5 class="d-inline">+</h5> 10</h3>
+                        <p class="p-painel fs-5">cursos oferecidos</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </article>
 </section>
 
@@ -29,7 +50,7 @@
                     <img src="./assets/img/background/circulo.png" width="420" height="420" alt="">
                 </div> -->
                 <!-- Coloquei a imagem do círculo dentro de um contêiner flexível para centralização -->
-                <h1 class="pt-5 mt-4">Acreditar Sempre!!!!</h1>
+                <h1 class="pt-5 mt-4 text-lilas">Acreditar Sempre!!!!</h1>
                 <p class="pt-4 ">
                     Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
                     
