--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,14 @@ html {
 body {
     min-height: 100%;
     display: grid;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     /* background: linear-gradient(90deg, rgb(131, 159, 250), rgb(131, 210, 250)); */
-    grid-template-rows: 1fr auto; 
+    grid-template-rows: 1fr auto;
+    background-image: url('/assets/img/background/tela.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
 }
 
 p {
