--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -30,6 +30,10 @@
                         <h3 class="fs-1 h3-painel"><h5 class="d-inline">+</h5> 10</h3>
                         <p class="p-painel fs-5">cursos oferecidos</p>
                     </li>
+                    <li class="text-center list-group-item mx-5">
+                        <h3 class="fs-1 h3-painel"><h5 class="d-inline">+</h5> 4</h3>
+                        <p class="p-painel fs-5">anos na causa</p>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -37,6 +41,8 @@
 </section>
 
 <!-- cargos do Instituto -->
+
+  <!-- presidente -->
 <section class="cor-fundo">
     <div class="container d-flex flex-column position-relative mb-3 pb-4">
         <article class="mt-5 row">
@@ -59,6 +65,44 @@
             </div>
         </article>
     </div>
+</section>
+
+  <!-- outros membros -->
+<section class="container">
+    <article class="row my-5">
+        <h2 class="col-12 text-center mb-5">
+            Grupo de Voluntarios <i class="fa-solid fa-handshake-simple icones"></i>
+        </h2>
+
+        <div>
+            <div class="card-group">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </article>
 </section>
 
 <!-- Resumo de atividades do REFAM -->
