--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -74,28 +74,38 @@
             Grupo de Voluntarios <i class="fa-solid fa-handshake-simple icones"></i>
         </h2>
 
-        <div>
-            <div class="card-group">
-                <div class="card">
-                </div>
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
+        <div class="container">
+            <div class="item position-relative">
+              <div class="card position-absolute">
+                <div class="circle circle2"></div>
+                <div class="circle circle1"></div>
+                <img src="https://i.ibb.co/tCKLc3d/audience-band-club-2747446.jpg" />
               </div>
-        </div>
+              <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor mauris, eleifend ac fermentum at, pellentesque non sem. Vivamus lectus felis, porttitor eu est sit amet, aliquet laoreet ligula.</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="card">
+                <div class="circle circle2"></div>
+                <div class="circle circle1"></div>
+                <img src="https://i.ibb.co/3hnXN31/4k-wallpaper-audience-band-2728557.jpg" />
+              </div>
+              <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor mauris, eleifend ac fermentum at, pellentesque non sem. Vivamus lectus felis, porttitor eu est sit amet, aliquet laoreet ligula.</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="card">
+                <div class="circle circle2"></div>
+                <div class="circle circle1"></div>
+                <img src="https://i.ibb.co/vqsdkRt/cheerful-concert-crowd-849.jpg" />
+              </div>
+              <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor mauris, eleifend ac fermentum at, pellentesque non sem. Vivamus lectus felis, porttitor eu est sit amet, aliquet laoreet ligula.</p>
+              </div>
+            </div>
+          </div>
     </article>
 </section>
 
