--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -74,51 +74,49 @@
             Grupo de Voluntarios <i class="fa-solid fa-handshake-simple icones"></i>
         </h2>
 
-        <div class="container">
-            <div class="item position-relative">
-              <div class="card position-absolute">
-                <div class="circle circle2"></div>
-                <div class="circle circle1"></div>
-                <img src="https://i.ibb.co/tCKLc3d/audience-band-club-2747446.jpg" />
+        <div class="box mb-5">
+            <div class="card">
+              <div class="imgBx">
+                  <img src="https://images.unsplash.com/photo-1532123675048-773bd75df1b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="images">
               </div>
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor mauris, eleifend ac fermentum at, pellentesque non sem. Vivamus lectus felis, porttitor eu est sit amet, aliquet laoreet ligula.</p>
+              <div class="details">
+                  <h2>SomeOne Famous<br><span>Director</span></h2>
               </div>
             </div>
-            <div class="item">
-              <div class="card">
-                <div class="circle circle2"></div>
-                <div class="circle circle1"></div>
-                <img src="https://i.ibb.co/3hnXN31/4k-wallpaper-audience-band-2728557.jpg" />
-              </div>
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor mauris, eleifend ac fermentum at, pellentesque non sem. Vivamus lectus felis, porttitor eu est sit amet, aliquet laoreet ligula.</p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="card">
-                <div class="circle circle2"></div>
-                <div class="circle circle1"></div>
-                <img src="https://i.ibb.co/vqsdkRt/cheerful-concert-crowd-849.jpg" />
-              </div>
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor mauris, eleifend ac fermentum at, pellentesque non sem. Vivamus lectus felis, porttitor eu est sit amet, aliquet laoreet ligula.</p>
-              </div>
-            </div>
-          </div>
+          
+             <div class="card">
+               <div class="imgBx">
+                  <img src="https://images.unsplash.com/photo-1549417229-aa67d3263c09?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="images">
+               </div>
+               <div class="details">
+                  <h2>SomeOne Famous<br><span>Producer</span></h2>
+                </div>
+             </div>
+      
+             <div class="card">
+               <div class="imgBx">
+                  <img src="https://images.unsplash.com/photo-1548094878-84ced0f6896d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="images">
+               </div>
+               <div class="details">
+                  <h2>SomeOne Famous<br><span>Actor</span></h2>
+                </div>
+             </div>
+       
+        </div>
+          
     </article>
 </section>
 
 <!-- Resumo de atividades do REFAM -->
 
-<section>
+<!-- <section>
     <article class="mt-4 pt-3">
         <h1 class="text-center pb-2 mt-5 sem-animaçao text-decoration-underline">
             Algumas atividades do REFAM
         </h1>
         <div class="container my-5">
             <div class="row">
-                <ul class="list-inline d-flex justify-content-center flex-wrap"> <!-- Adicione flex-wrap para garantir que os itens se ajustem em dispositivos menores -->
+                <ul class="list-inline d-flex justify-content-center flex-wrap"> 
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
@@ -158,7 +156,7 @@
             </div>
         </div>
     </article>
-</section>
+</section> -->
 
 <!-- ajuda a dependentes quimicos -->
 <div class="bg-primary bg-gradient bg-opacity-25 py-4 mb-5">
@@ -196,12 +194,12 @@
 
 <section class="my-4">
 
-    <h2 class="text-center fs-1 pt-4 pb-4 my-4 position-relative">
+    <h2 class="text-center fs-1 pt-4 pb-4 my-3 position-relative">
         Durante alguns anos viemos <div class="cor-destaque d-inline">ajudando</div> os familiares do Novo Gama!!!
     </h2>
     
 
-    <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-4">
+    <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-5">
         <div id="carouselExampleAutoplaying" class="carousel slide w-75" data-bs-ride="carousel"> <!-- Aumentei a largura para 75% -->
             <div class="carousel-inner rounded-5">
                 <div class="carousel-item active">
@@ -228,7 +226,7 @@
 
 <!-- ajude a comunidade -->
 
-<div class="bg-primary bg-gradient bg-opacity-25 py-4 my-5">
+<div class="bg-primary bg-gradient bg-opacity-25 py-4 mt-5">
 
     <section class="container flex-column">
         <article class="row">
