--- a/src/app/buttons/buttons.component.css
+++ b/src/app/buttons/buttons.component.css
@@ -1,69 +1,82 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:100&display=swap');
-
-
-.container {
-  overflow: hidden;
-  height: 100px;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+.wrap {
+  height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-.center {
-  width: 180px;
-  height: 60px;
-  position: absolute;
-}
-
-.btn {
-  border-radius: 5px;
-  width: 180px;
-  height: 60px;
+.button {
+  min-width: 300px;
+  min-height: 60px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #313133;
+  background: #4FD1C5;
+background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+  transition: all 0.3s ease-in-out 0s;
   cursor: pointer;
-  background: transparent;
-  border: 1px solid #91C9FF;
   outline: none;
-  transition: 1s ease-in-out;
-}
+  position: relative;
+  padding: 10px;
+  }
 
-svg {
-  border-radius: 5px;
+button::before {
+content: '';
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid #00FFCB;
+  box-shadow: 0 0 60px rgba(0,255,203,.64);
   position: absolute;
-  left: 0;
-  top: 0;
-  fill: none;
-  stroke: #fff;
-  stroke-dasharray: 150 480;
-  stroke-dashoffset: 150;
-  transition: 1s ease-in-out;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all .3s ease-in-out 0s;
 }
 
-.btn:hover {
-  transition: 1s ease-in-out;
-  background: #6bc266;
+.button:hover, .button:focus {
+  color: #313133;
+  transform: translateY(-6px);
 }
 
-.btn:hover svg {
-  stroke-dashoffset: -480;
+button:hover::before, button:focus::before {
+  opacity: 1;
 }
 
-.btn span {
-  color: white;
-  font-size: 18px;
-  font-weight: 100;
+button::after {
+  content: '';
+  width: 30px; height: 30px;
+  border-radius: 100%;
+  border: 6px solid #00FFCB;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
 }
 
-.setas-img {
-  width: 100%;
-  height: auto;
-  filter: brightness(1) hue-rotate(0deg); /* Define a cor inicial da imagem (branca) */
-  transition: filter 0.3s ease-in-out;
+button:hover::after, button:focus::after {
+  animation: none;
+  display: none;
 }
 
-.btn:hover .setas-img {
-  filter: brightness(1) hue-rotate(90deg); /* Ajuste a rotação para obter a cor verde desejada ao passar o mouse */
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
 }
