--- a/src/app/home/cursos/cursos.component.css
+++ b/src/app/home/cursos/cursos.component.css
@@ -25,3 +25,7 @@ h3, h4 {
         clip-path: inset(0% 0% 0% 0%);
     }
 }
+
+.sombra-verde {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px !important;
+}
