--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -199,7 +199,7 @@
     </h2>
     
 
-    <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-5">
+    <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-6">
         <div id="carouselExampleAutoplaying" class="carousel slide w-75" data-bs-ride="carousel"> <!-- Aumentei a largura para 75% -->
             <div class="carousel-inner rounded-5">
                 <div class="carousel-item active">
@@ -226,7 +226,7 @@
 
 <!-- ajude a comunidade -->
 
-<div class="bg-primary bg-gradient bg-opacity-25 py-4 mt-5">
+<div class="bg-primary bg-gradient bg-opacity-25 py-4 mt-5 mb-3">
 
     <section class="container flex-column">
         <article class="row">
@@ -244,7 +244,7 @@
 
                 <app-buttons class=""></app-buttons>
             </div>
-    
+            
         </article>
     </section>
 </div>
