--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -2,10 +2,10 @@
 
 <section class="container">
     <article class="row">
-        <div class="col-12 text-center my-5 text-decoration-underline">
-            <h3 id="cursos">
+        <div class="col-12 text-center my-5">
+            <h2 id="cursos">
                 Explorando horizontes e construindo futuros através de nossos cursos transformadores
-            </h3>
+            </h2>
         </div>
         
         <div class="col-lg-6 d-flex justify-content-center">
@@ -15,10 +15,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-50">
                 <img class="img-fluid" src="./assets/img/background/quadradinhos.png" width="550" height="550" alt="">
             </div>
-            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
+            <h4 class="pt-2 mt-2 mb-4 text-center">
                 Instalações Hidráulicas
             </h4>
             <p class="pt-1 text-center">
@@ -33,10 +33,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-75">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-25">
                 <img class="img-fluid" src="./assets/img/background/quadradinhos2.png" width="550" height="550" alt="">
             </div>
-            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
+            <h4 class="pt-2 mt-2 mb-4 text-center">
                 Eletricidade Residencial
             </h4>
             <p class="pt-1 text-center">
@@ -51,10 +51,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-75">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-25">
                 <img class="img-fluid" src="./assets/img/background/quadradinhos3.png" width="550" height="550" alt="">
             </div>
-            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
+            <h4 class="pt-2 mt-2 mb-4 text-center">
                 Aulas de Violão
             </h4>
             <p class="pt-1 text-center">
@@ -69,10 +69,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-25">
                 <img class="img-fluid" src="./assets/img/background/quadradinhos4.png" width="550" height="550" alt="">
             </div>
-            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
+            <h4 class="pt-2 mt-2 mb-4 text-center">
                 Alfabetização para Adultos
             </h4>
             <p class="pt-1 text-center">
@@ -81,7 +81,7 @@
         </div>
     </article>
 </section>
-<section class="container" id="contatos">
+<section class="container cor-fundo" id="contatos">
     <article class="row">
         <div class="col-12 text-center my-5 mt-4">
             <h3 class="fs-2">
