--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -10,7 +10,7 @@
         
         <div class="col-lg-6 d-flex justify-content-center">
             <figure class="ms-3 mt-2 mb-5 revealing-image">
-                <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
+                <img class="rounded-5 img-cor1" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
@@ -28,7 +28,7 @@
 
         <div class="col-lg-6 d-flex justify-content-center">
             <figure class="ms-3 mt-2 mb-5 revealing-image">
-                <img class="rounded-5" src="./assets/img/cursos/eletricidade.jpg" width="350px" height="350px" alt="">
+                <img class="rounded-5 img-cor2" src="./assets/img/cursos/eletricidade.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
@@ -46,7 +46,7 @@
 
         <div class="col-lg-6 d-flex justify-content-center">
             <figure class="ms-3 mt-2 mb-5 revealing-image">
-                <img class="rounded-5" src="./assets/img/cursos/violao.jpg" width="350px" height="350px" alt="">
+                <img class="rounded-5 img-cor3" src="./assets/img/cursos/violao.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
@@ -64,7 +64,7 @@
 
         <div class="col-lg-6 d-flex justify-content-center">
             <figure class="ms-3 mt-2 mb-5 revealing-image">
-                <img class="rounded-5" src="./assets/img/cursos/alfabetizacao.jpg" width="350px" height="350px" alt="">
+                <img class="rounded-5 img-cor4" src="./assets/img/cursos/alfabetizacao.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
@@ -81,26 +81,29 @@
         </div>
     </article>
 </section>
-<section class="container cor-fundo" id="contatos">
-    <article class="row">
-        <div class="col-12 text-center my-5 mt-4">
-            <h3 class="fs-2">
-                Promovemos o crescimento e a confiança de crianças e jovens por meio do <br> Jiu-Jitsu, cultivando habilidades físicas e mentais.
-            </h3>
-        </div>
-        <h6 class="text-center fs-5 mb-5">
-            O projeto 'Força Máxima' é uma iniciativa única que combina a disciplina do Jiu-Jitsu e a estratégia do xadrez para promover o desenvolvimento integral de jovens de 6 a 17 anos. Com inscrições abertas na Quadra 12, Lote 04, Jardim Paiva, Novo Gama, essa oportunidade oferece benefícios incomparáveis. Além de ensinar técnicas essenciais de autodefesa, o Jiu-Jitsu desenvolve valores como respeito, autocontrole e trabalho em equipe. Já o xadrez, um jogo de mente, aprimora habilidades cognitivas, tomada de decisão e raciocínio estratégico. Juntos, esses programas proporcionam uma abordagem holística, preparando os jovens para enfrentar os desafios da vida com confiança e determinação. Inscreva-se agora e participe dessa jornada transformadora!
-        </h6>
-        
-        <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
-            <figure class="revealing-image">
-                <img class="rounded-5" src="./assets/img/cursos/jiujitsu.jpg" alt="" width="400" height="400">
-            </figure>
-        </div>
-        <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
-            <figure class="revealing-image">
-                <img class="rounded-5" src="./assets/img/cursos/xadrez.jpg" alt="" width="400" height="400">
-            </figure>
+<section class="cor-fundo my-5" id="contatos">
+    <article class="container">
+        <div class="row">
+            <div class="col-12 text-center my-5 mt-4">
+                <h3 class="fs-2 my-4">
+                    Promovemos o crescimento e a confiança de crianças e jovens por meio do <br> Jiu-Jitsu, cultivando habilidades físicas e mentais.
+                </h3>
+            </div>
+
+            <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
+                <figure class="revealing-image">
+                    <img class="rounded-5" src="./assets/img/cursos/jiujitsu.jpg" alt="" width="400" height="400">
+                </figure>
+            </div>
+            <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
+                <figure class="revealing-image">
+                    <img class="rounded-5" src="./assets/img/cursos/xadrez.jpg" alt="" width="400" height="400">
+                </figure>
+            </div>
+
+            <h6 class="text-center fs-5 mb-5">
+                O projeto 'Força Máxima' é uma iniciativa única que combina a disciplina do Jiu-Jitsu e a estratégia do xadrez para promover o desenvolvimento integral de jovens de 6 a 17 anos. Com inscrições abertas na Quadra 12, Lote 04, Jardim Paiva, Novo Gama, essa oportunidade oferece benefícios incomparáveis. Além de ensinar técnicas essenciais de autodefesa, o Jiu-Jitsu desenvolve valores como respeito, autocontrole e trabalho em equipe. Já o xadrez, um jogo de mente, aprimora habilidades cognitivas, tomada de decisão e raciocínio estratégico. Juntos, esses programas proporcionam uma abordagem holística, preparando os jovens para enfrentar os desafios da vida com confiança e determinação. Inscreva-se agora e participe dessa jornada transformadora!
+            </h6>
         </div>
     </article>
 </section>
