--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -109,5 +109,5 @@
 </section>
 
 <section>
-    <h3>vai ter algo aqui sobre pedir ajuda</h3>
+    <h3>vai ter algo aqui sobre pedir ajuda aaaa</h3>
 </section>
