--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -92,12 +92,7 @@
 
             <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
                 <figure class="revealing-image">
-                    <img class="rounded-5" src="./assets/img/cursos/jiujitsu.jpg" alt="" width="400" height="400">
-                </figure>
-            </div>
-            <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
-                <figure class="revealing-image">
-                    <img class="rounded-5" src="./assets/img/cursos/xadrez.jpg" alt="" width="400" height="400">
+                    <img src="./assets/img/cursos/templete.png" alt="" width="400" height="400">
                 </figure>
             </div>
 
