--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -104,5 +104,6 @@
 </section>
 
 <section>
-    <h3>vai ter algo aqui sobre pedir ajuda aaaa</h3>
+    <h3>vai ter algo aqui sobre pedir ajuda aaaaaaaaa</h3>
+    <h3>a</h3>
 </section>
