--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -84,21 +84,21 @@
 <section class="cor-fundo my-5" id="contatos">
     <article class="container">
         <div class="row">
-            <div class="col-12 text-center my-5 mt-4">
+            <div class="col-6 text-center my-5 mt-4">
                 <h3 class="fs-2 my-4">
                     Promovemos o crescimento e a confiança de crianças e jovens por meio do <br> Jiu-Jitsu, cultivando habilidades físicas e mentais.
                 </h3>
             </div>
 
-            <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
-                <figure class="revealing-image">
+            <div class="col-lg-6 d-flex justify-content-center">
+                <figure class="revealing-image mt-5">
                     <img src="./assets/img/cursos/templete.png" alt="" width="400" height="400">
                 </figure>
             </div>
 
-            <h6 class="text-center fs-5 mb-5">
+            <!-- <h6 class="text-center fs-5 mb-5">
                 O projeto 'Força Máxima' é uma iniciativa única que combina a disciplina do Jiu-Jitsu e a estratégia do xadrez para promover o desenvolvimento integral de jovens de 6 a 17 anos. Com inscrições abertas na Quadra 12, Lote 04, Jardim Paiva, Novo Gama, essa oportunidade oferece benefícios incomparáveis. Além de ensinar técnicas essenciais de autodefesa, o Jiu-Jitsu desenvolve valores como respeito, autocontrole e trabalho em equipe. Já o xadrez, um jogo de mente, aprimora habilidades cognitivas, tomada de decisão e raciocínio estratégico. Juntos, esses programas proporcionam uma abordagem holística, preparando os jovens para enfrentar os desafios da vida com confiança e determinação. Inscreva-se agora e participe dessa jornada transformadora!
-            </h6>
+            </h6> -->
         </div>
     </article>
 </section>
