--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -104,5 +104,5 @@
 </section>
 
 <section>
-    <h3>vai ter algo aqui sobre pedir ajuda aaaqqqaaaaaaaaa</h3>
+    <h3>vai ter algo aqui sobre pedir ajuda aaaqqqaaaaaaaaaaaa</h3>
 </section>
